deploy/frontend.yaml

kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app: frontend
  annotations: 
    # https://larry.claman.net/post/2021-04-04-aks-dns-naming/
    service.beta.kubernetes.io/azure-dns-label-name: globoticket
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "frontend"
        dapr.io/app-port: "8080"
        dapr.io/config: "appconfig"
    spec:
      containers:
      - name: frontend
        image: markheath/globoticket-dapr-frontend:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
